@@ -1,13 +1,20 @@
+2009-11-17  Andreas Kupries  <andreask@activestate.com>
+
+	* unix/tclUnixChan.c (TtyParseMode): Partial undo of Donal's tidy-
+	up from a few days ago (2009-11-9, not in ChangeLog). strchr is
+	apparently a macro on AIX and reacts badly to pre-processor
+	directives in its arguments.
+
 2009-11-16  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
-        * generic/tclEncoding.c: (forward port) Fix [Bug 2891556] and improve
-        * generic/tclTest.c:      test to detect similar manifestations in the
+	* generic/tclEncoding.c: (forward port) Fix [Bug 2891556] and improve
+	* generic/tclTest.c:      test to detect similar manifestations in the
 	* tests/encoding.test:    future. Add tcltest support for finalization.
 
 2009-11-15  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* win/tclWinDde.c: Avoid gcc compiler warning by
-        explicitly casting DdeCreateStringHandle argument.
+	explicitly casting DdeCreateStringHandle argument.
 
 2009-11-12  Andreas Kupries  <andreask@activestate.com>
 
